--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,8 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.material-symbols-outlined {
+  font-size: 18px !important;
+}
+
